--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "io-flow-types",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Flow compatible runtime type system for IO validation",
   "files": [
     "lib"
@@ -30,7 +30,7 @@
   },
   "homepage": "https://github.com/orlandoc01/io-flow-types",
   "peerDependencies": {
-    "flow-bin": ">=0.81 <0.95"
+    "flow-bin": ">=0.81"
   },
   "dependencies": {},
   "devDependencies": {
@@ -51,7 +51,7 @@
     "benchmark": "2.1.4",
     "eslint": "^5.8.0",
     "eslint-plugin-flowtype": "^3.1.1",
-    "flow-bin": "^0.90.0",
+    "flow-bin": "^0.95.1",
     "flow-copy-source": "^2.0.2",
     "flow-typed": "^2.5.1",
     "got": "^9.5.0",
