--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
     "benchmark": "2.1.4",
+    "bluebird": "^3.5.4",
     "eslint": "^5.8.0",
     "eslint-plugin-flowtype": "^3.1.1",
     "flow-bin": "^0.98.0",
